# QML-examples

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: 0 - Checking the setup.ipynb  1 - Quantum embeddings.ipynb  1.1 - Making use of Kernels.ipynb  2 - Dimensionality reduction.ipynb  2.1 - Dimensionality reduction using NNs.ipynb  2.2 - Hand digit use case.ipynb  3 - Computing derivatives.ipynb  3.1 - Trainable embeddings.ipynb  3.2 - Trainable Kernels and classical models.ipynb  4 - Quantum Neural Networks.ipynb  4.1 - Quanvolutions and Neural Networks for MedMNIST.ipynb  q_test_images.npy  q_train_images.npy  utils.py  visualize.py
