[project]
name = "QML-101"
version = "0.1.0"
description = "Example codes for QML training"
authors = [
    {name = "IraitzM", email = "iraitzm@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.9, <3.12"
readme = "README.md"
license = {text = " "}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
examples = [
    "squlearn>=0.5.2",
    "scikit-learn>=1.4.0",
    "ipykernel>=6.29.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.2",
    "scikit-optimize>=0.9.0",
    "pylatexenc>=2.10",
    "torch>=2.2.0",
    "medmnist>=3.0.1",
]
docs = [
    "sphinx>=7.2.6",
    "furo>=2023.9.10",
    "myst-parser>=2.0.0",
    "sphinx-math-dollar>=1.2.1",
]
